--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <section class="cuerpo_info">
                   <p class="text-dark">Mi nombre es Cristian, Analista de Sistemas de Argentina, Analista técnico-funcional de requerimientos, desarrollo de reconciliaciones por medio de herramienta ETL para grandes y pequeñas empresas / consultoras.
 Por más de 15 años, trabajé en distintas compañías, en la parte de desarrollo, testing, relevamiento de requerimientos, para distintos proyectos y clientes.
-Soy capaz de solucionar problemas y me encanta asumir proyectos complejos y desafiantes. Soy excelente para ponerme al día rápidamente y desglosar requisitos comerciales para sistemas específicos de la industria.
+Soy capaz de solucionar problemas y me encanta asumir proyectos complejos y desafiantes. Soy excelente para ponerme al día rápidamente y comprender requisitos comerciales para sistemas específicos de la industria.
 También me desempeño como profesor de informática en escuela secundaria, impartiendo materias relacionadas a Desarrollo Web, herramientas de ofimática, programación y bases de datos.
 Por lo tanto, sea que quiera crear su primera página o realizar mantenimiento de algún proyecto ya existente, estoy preparado para ayudarlo a realizar su próximo desafío.</p>
                 <img class="imagen_foto" src="imagenes/CD.jpg" alt="Foto Cristian Di Gregorio">
