--- a/paginas/Links_Utiles.html
+++ b/paginas/Links_Utiles.html
@@ -63,11 +63,10 @@
                     </div>
                   </div>
                 <div class="link">
-                    <p>Link 1</p>
-                    <p class="link1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto voluptatum voluptates. Eius
-                        placeat impedit non quasi atque eum, officia, laudantium vitae nisi nemo perferendis aliquid modi iure,
-                        nulla debitis!</p>
-                        <img class="proyecto_img" src="../imagenes/Imagen_L1.png" alt="Imagen de link Nro 1">
+                    <p>Link a Libreoffice</p>
+                    <p class="link1">Libreoffice es una herramienta de oficina libre, similar al paquete office, que tiene disponible, un procesador de texto, planilla de cálculo, una aplicación para realizar presentaciones, y muchas otras.</p>
+                        <img class="proyecto_img" src="../imagenes/Imagen_L1_2.png" alt="Imagen de link Nro 1">
+                        <a class="link1a" href="https://www.libreoffice.org/download/download/" target="New"><p id="click">Click Acá</p></a>
                 </div>
             </section>
             <section>
