--- a/paginas/Proyectos.html
+++ b/paginas/Proyectos.html
@@ -64,10 +64,8 @@
                 </div>
                 <div class="proyecto">
                   <p>Proyecto 1</p>
-                    <p class="proyecto1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto voluptatum voluptates. Eius
-                        placeat impedit non quasi atque eum, officia, laudantium vitae nisi nemo perferendis aliquid modi iure,
-                        nulla debitis!</p>
-                        <img class="proyecto_img" src="../imagenes/Imagen_P1.png" alt="Imagen de proyecto Nro 1">
+                    <p class="proyecto1">Primer proyecto autodidacta realizado en HTML/CSS en 2018. Una página que muestra una herramienta de oficina y donde agrego link de descarga y un tutorial para aprender a usarla.</p>
+                        <img class="proyecto_img" src="../imagenes/Captura_Proyecto1.PNG" alt="Imagen de proyecto Nro 1">
                 </div>
             </section>
             <section>
