Modificando imagenes y párrafos

--- a/paginas/Links_Utiles.html
+++ b/paginas/Links_Utiles.html
@@ -71,20 +71,16 @@
             </section>
             <section>
                 <div class="link">
-                    <p>Link 2</p>
-                    <p class="link2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto voluptatum voluptates. Eius
-                        placeat impedit non quasi atque eum, officia, laudantium vitae nisi nemo perferendis aliquid modi iure,
-                        nulla debitis!</p>
+                    <p>Link a Bootstrap</p>
+                    <p class="link2">Bootstrap es una biblioteca multiplataforma o conjunto de herramientas de código abierto para diseño de sitios y aplicaciones web.</p>
                     <img class="proyecto_img" src="../imagenes/Imagen_L2.png" alt="Imagen de link Nro 2">
                 </div>
             </section>
             <section>
                 <div class="link">
-                    <p>Link n</p>
-                    <p class="link_n">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto voluptatum voluptates. Eius
-                        placeat impedit non quasi atque eum, officia, laudantium vitae nisi nemo perferendis aliquid modi iure,
-                        nulla debitis!</p>
-                    <img class="proyecto_img" src="../imagenes/Imagen_Link_n.png" alt="Imagen de link Nro n">
+                    <p>Link a Git</p>
+                    <p class="link_n">Git es un sistema de control de versiones distribuido gratuito y de código abierto diseñado para manejar todo, desde proyectos pequeños hasta proyectos muy grandes con velocidad y eficiencia.</p>
+                    <img class="proyecto_img" src="../imagenes/Imagen_Link_3.png" alt="Imagen de link Nro 3">
                 </div>
             </section>
             <!--Fin section-->
