--- a/paginas/Proyectos.html
+++ b/paginas/Proyectos.html
@@ -71,18 +71,14 @@
             <section>
                 <div class="proyecto">
                   <p>Proyecto 2</p>
-                    <p class="proyecto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto voluptatum voluptates. Eius
-                        placeat impedit non quasi atque eum, officia, laudantium vitae nisi nemo perferendis aliquid modi iure,
-                        nulla debitis!</p>
+                    <p class="proyecto2">Proyecto Nro 2, todavía no terminado.</p>
                     <img class="proyecto_img" src="../imagenes/Imagen_P2.png" alt="Imagen de proyecto Nro 2">
                 </div>
             </section>
             <section>
                 <div class="proyecto">
-                  <p>Proyecto n</p>
-                    <p class="proyecto_n">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto voluptatum voluptates. Eius
-                        placeat impedit non quasi atque eum, officia, laudantium vitae nisi nemo perferendis aliquid modi iure,
-                        nulla debitis!</p>
+                  <p>Proyecto 3</p>
+                    <p class="proyecto_n">Un Nuevo proyecto, todavía no terminado.</p>
                     <img class="proyecto_img" src="../imagenes/Imagen_ProyN.png" alt="Imagen de proyecto Nro n">
                 </div>
             </section>
