Modificando imagenes y párrafos v2

--- a/paginas/Curriculum.html
+++ b/paginas/Curriculum.html
@@ -94,9 +94,7 @@
             <section>
                 <div class="referencias">
                     <p>Referencias</p>
-                    <p class="referencias_cv">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio iusto voluptatum voluptates. Eius
-                        placeat impedit non quasi atque eum, officia, laudantium vitae nisi nemo perferendis aliquid modi iure,
-                        nulla debitis!</p>
+                    <p class="referencias_cv">Por ahora no tengo referencias para presentar.</p>
                 </div>
             </section>
             <!--Fin section-->
