--- a/paginas/Links_Utiles.html
+++ b/paginas/Links_Utiles.html
@@ -65,7 +65,7 @@
                 <div class="link">
                     <p>Link a Libreoffice</p>
                     <p class="link1">Libreoffice es una herramienta de oficina libre, similar al paquete office, que tiene disponible, un procesador de texto, planilla de cálculo, una aplicación para realizar presentaciones, y muchas otras.</p>
-                        <img class="proyecto_img" src="../imagenes/Imagen_L1_2.png" alt="Imagen de link Nro 1">
+                        <img class="proyecto_img" src="../imagenes/Imagen_L1_3.png" alt="Imagen sobre Libreoffice">
                         <a class="link1a" href="https://www.libreoffice.org/download/download/" target="New"><p id="click">Click Acá</p></a>
                 </div>
             </section>
@@ -73,14 +73,16 @@
                 <div class="link">
                     <p>Link a Bootstrap</p>
                     <p class="link2">Bootstrap es una biblioteca multiplataforma o conjunto de herramientas de código abierto para diseño de sitios y aplicaciones web.</p>
-                    <img class="proyecto_img" src="../imagenes/Imagen_L2.png" alt="Imagen de link Nro 2">
+                    <img class="proyecto_img" src="../imagenes/Imagen_L2.png" alt="Imagen sobre Bootstrap">
+                    <a class="link1a" href="https://getbootstrap.com/" target="New"><p id="click">Click Acá</p></a>
                 </div>
             </section>
             <section>
                 <div class="link">
                     <p>Link a Git</p>
                     <p class="link_n">Git es un sistema de control de versiones distribuido gratuito y de código abierto diseñado para manejar todo, desde proyectos pequeños hasta proyectos muy grandes con velocidad y eficiencia.</p>
-                    <img class="proyecto_img" src="../imagenes/Imagen_Link_3.png" alt="Imagen de link Nro 3">
+                    <img class="proyecto_img" src="../imagenes/Imagen_Link_3.png" alt="Imagen sobre Git">
+                    <a class="link1a" href="https://git-scm.com/" target="New"><p id="click">Click Acá</p></a>
                 </div>
             </section>
             <!--Fin section-->
