--- a/paginas/Proyectos.html
+++ b/paginas/Proyectos.html
@@ -71,14 +71,14 @@
             <section>
                 <div class="proyecto">
                   <p>Proyecto 2</p>
-                    <p class="proyecto2">Proyecto Nro 2, todavía no terminado.</p>
+                    <p class="proyecto2">Proyecto Nro 2, todavía no realizado, pero imaginandolo para un futuro próximo.</p>
                     <img class="proyecto_img" src="../imagenes/Imagen_P2.png" alt="Imagen de proyecto Nro 2">
                 </div>
             </section>
             <section>
                 <div class="proyecto">
                   <p>Proyecto 3</p>
-                    <p class="proyecto_n">Un Nuevo proyecto, todavía no terminado.</p>
+                    <p class="proyecto_n">Un Nuevo proyecto, todavía no realizado, pero imaginandolo para un futuro próximo.</p>
                     <img class="proyecto_img" src="../imagenes/Imagen_ProyN.png" alt="Imagen de proyecto Nro n">
                 </div>
             </section>
