Ultima entrega modificaciones y SEO

--- a/paginas/Links_Utiles.html
+++ b/paginas/Links_Utiles.html
@@ -30,7 +30,7 @@
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarToggler">
-                        <ul class="navbar-nav .d-flex flex-row mb-3 justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
+                        <ul class="navbar-nav .d-flex justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
                           <li class="nav-item">
                             <a class="nav-link" href="../index.html">Sobre mí</a>
                           </li>
@@ -41,10 +41,10 @@
                             <a class="nav-link" href="../paginas/Proyectos.html">Proyectos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"  href="../paginas/Links_Utiles.html">Links Utiles</a>
+                            <a class="nav-link active" aria-current="page"  href="/paginas/Links_Utiles.html">Links Utiles</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="../paginas/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="/paginas/Contacto.html">Contacto</a>
                           </li>
                         </ul>
                       </div>
