--- a/paginas/Proyectos.html
+++ b/paginas/Proyectos.html
@@ -30,7 +30,7 @@
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarToggler">
-                        <ul class="navbar-nav .d-flex flex-row mb-3 justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
+                        <ul class="navbar-nav .d-flex justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
                           <li class="nav-item">
                             <a class="nav-link" href="../index.html">Sobre mí</a>
                           </li>
@@ -38,13 +38,13 @@
                             <a class="nav-link" href="../paginas/Curriculum.html">Curriculum</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../paginas/Proyectos.html">Proyectos</a>
+                            <a class="nav-link active" aria-current="page" href="/paginas/Proyectos.html">Proyectos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="../paginas/Links_Utiles.html">Links Utiles</a>
+                            <a class="nav-link" href="/paginas/Links_Utiles.html">Links Utiles</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="../paginas/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="/paginas/Contacto.html">Contacto</a>
                           </li>
                         </ul>
                       </div>
@@ -63,23 +63,9 @@
                   </div>
                 </div>
                 <div class="proyecto">
-                  <p>Proyecto 1</p>
+                  <p>Herramientas de informática</p>
                     <p class="proyecto1">Primer proyecto autodidacta realizado en HTML/CSS en 2018. Una página que muestra una herramienta de oficina y donde agrego link de descarga y un tutorial para aprender a usarla.</p>
-                        <img class="proyecto_img" src="../imagenes/Captura_Proyecto1.PNG" alt="Imagen de proyecto Nro 1">
-                </div>
-            </section>
-            <section>
-                <div class="proyecto">
-                  <p>Proyecto 2</p>
-                    <p class="proyecto2">Proyecto Nro 2, todavía no realizado, pero imaginandolo para un futuro próximo.</p>
-                    <img class="proyecto_img" src="../imagenes/Imagen_P2.png" alt="Imagen de proyecto Nro 2">
-                </div>
-            </section>
-            <section>
-                <div class="proyecto">
-                  <p>Proyecto 3</p>
-                    <p class="proyecto_n">Un Nuevo proyecto, todavía no realizado, pero imaginandolo para un futuro próximo.</p>
-                    <img class="proyecto_img" src="../imagenes/Imagen_ProyN.png" alt="Imagen de proyecto Nro n">
+                        <img class="proyecto_img" src="../imagenes/Captura_Proyecto1.PNG" alt="Imagen de proyecto Nro 1, herramientas de oficina">
                 </div>
             </section>
             <!--Fin section-->
