--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Acme&family=Kanit:wght@100&family=Wellfleet&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- SEO -->
+        <meta name="keywords" content="Desarrollo Web, html, css, Portfolio, Front-End, Proyectos Web">
+        <meta name="description" content="Mi nombre es Cristian, Analista de Sistemas de Argentina, Analista técnico-funcional de requerimientos, desarrollo de reconciliaciones por medio de herramienta ETL para grandes y pequeñas empresas / consultoras.">
+        <meta name="language" content="Spanish">
     </head>
     <!--Fin head-->
     <!--Inicio body-->
@@ -30,7 +34,7 @@
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarToggler">
-                        <ul class="navbar-nav .d-flex flex-row mb-3 justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
+                        <ul class="navbar-nav .d-flex justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
                           <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Sobre mí</a>
                           </li>
