--- a/paginas/Contacto.html
+++ b/paginas/Contacto.html
@@ -29,7 +29,7 @@
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarToggler">
-                        <ul class="navbar-nav .d-flex flex-row mb-3 justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
+                        <ul class="navbar-nav .d-flex justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
                           <li class="nav-item">
                             <a class="nav-link" href="../index.html">Sobre mí</a>
                           </li>
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="../paginas/Links_Utiles.html">Links Utiles</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../paginas/Contacto.html">Contacto</a>
+                            <a class="nav-link active" aria-current="page" href="/paginas/Contacto.html">Contacto</a>
                           </li>
                         </ul>
                       </div>
@@ -64,14 +64,15 @@
                 <!--Inicio formulario-->
                 <div class="form_contacto">
                     <form method="POST" action="#" autocomplete="off">
-                        <label for="nombre">Nombre: </label><br>
-                        <input id="nombre" type="text" placeholder="Nombre" required><br>
-                        <label for="apellido">Apellido: </label><br>
-                        <input id="apellido" type="text" placeholder="Apellido" required><br>
-                        <label for="telefono">Telefono: </label><br>
-                        <input id="telefono" type="text"placeholder="Telefono" required><br>
-                        <br>
-                        <textarea name="Consulta" rows="5" cols="22" placeholder="Deje su comentario"></textarea><br><br>
+                        <label for="nombre">Nombre: </label>
+                        <input id="nombre" type="text" placeholder="Nombre" required>
+                        <label for="apellido">Apellido: </label>
+                        <input id="apellido" type="text" placeholder="Apellido" required>
+                        <label for="telefono">Telefono: </label>
+                        <input id="telefono" type="text"placeholder="Telefono" required>
+                        <label for="Consulta">Comentarios: </label>
+                        <textarea name="Consulta" rows="5" cols="22" placeholder="Deje su comentario"></textarea>
+                        <label></label>
                         <input type="submit" value="Enviar Formulario">
                     </form>
                 </div>
