--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <a class="nav-link" href="/paginas/Links_Utiles.html">Links Utiles</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="paginas/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="/paginas/Contacto.html">Contacto</a>
                           </li>
                         </ul>
                       </div>
