--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Sobre mí</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="./paginas/Curriculum.html">Curriculum</a>
+                            <a class="nav-link" href="paginas/Curriculum.html">Curriculum</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="./paginas/Proyectos.html">Proyectos</a>
