--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                             <a class="nav-link" href="paginas/Curriculum.html">Curriculum</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="./paginas/Proyectos.html">Proyectos</a>
+                            <a class="nav-link" href="paginas/Proyectos.html">Proyectos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="./paginas/Links_Utiles.html">Links Utiles</a>
+                            <a class="nav-link" href="paginas/Links_Utiles.html">Links Utiles</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="./paginas/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="paginas/Contacto.html">Contacto</a>
                           </li>
                         </ul>
                       </div>
