--- a/paginas/Curriculum.html
+++ b/paginas/Curriculum.html
@@ -32,7 +32,7 @@
                   <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav .d-flex justify-content-start align-items-end flex-wrap"> <!-- Uso clases Bootstrap -->
                       <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Sobre mí</a>
+                        <a class="nav-link" href="/index.html">Sobre mí</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="paginas/Curriculum.html">Curriculum</a>
