--- a/paginas/Curriculum.html
+++ b/paginas/Curriculum.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="../index.html">Sobre mí</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="paginas/Curriculum.html">Curriculum</a>
+                        <a class="nav-link active" aria-current="page" href="Curriculum.html">Curriculum</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="Proyectos.html">Proyectos</a>
