--- a/paginas/Proyectos.html
+++ b/paginas/Proyectos.html
@@ -38,13 +38,13 @@
                             <a class="nav-link" href="../paginas/Curriculum.html">Curriculum</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/paginas/Proyectos.html">Proyectos</a>
+                            <a class="nav-link active" aria-current="page" href="Proyectos.html">Proyectos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/paginas/Links_Utiles.html">Links Utiles</a>
+                            <a class="nav-link" href="Links_Utiles.html">Links Utiles</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/paginas/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="Contacto.html">Contacto</a>
                           </li>
                         </ul>
                       </div>
