--- a/paginas/Contacto.html
+++ b/paginas/Contacto.html
@@ -34,16 +34,16 @@
                             <a class="nav-link" href="../index.html">Sobre mí</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="../paginas/Curriculum.html">Curriculum</a>
+                            <a class="nav-link" href="Curriculum.html">Curriculum</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="../paginas/Proyectos.html">Proyectos</a>
+                            <a class="nav-link" href="Proyectos.html">Proyectos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="../paginas/Links_Utiles.html">Links Utiles</a>
+                            <a class="nav-link" href="Links_Utiles.html">Links Utiles</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/paginas/Contacto.html">Contacto</a>
+                            <a class="nav-link active" aria-current="page" href="Contacto.html">Contacto</a>
                           </li>
                         </ul>
                       </div>
