--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Sobre mí</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="Curriculum.html">Curriculum</a>
+                            <a class="nav-link" href="/Curriculum.html">Curriculum</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="Proyectos.html">Proyectos</a>
+                            <a class="nav-link" href="/Proyectos.html">Proyectos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="Links_Utiles.html">Links Utiles</a>
+                            <a class="nav-link" href="/Links_Utiles.html">Links Utiles</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="Contacto.html">Contacto</a>
+                            <a class="nav-link" href="/Contacto.html">Contacto</a>
                           </li>
                         </ul>
                       </div>
